--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -496,26 +496,42 @@
  </tab>   
       <tab heading="{{clientdatatable.registeredTableName}}" ng-repeat="clientdatatable in clientdatatables" select="dataTableChange(clientdatatable)">
         <div>
-          <a ng-show="datatabledetails.isData" class="btn btn-danger pull-right" ng-click="deleteAll(clientdatatable.registeredTableName, client.id)"><i class="icon-trash icon-white"></i>{{'button.deleteall' | translate}}</a>
-          <span ng-show="!datatabledetails.isData || datatabledetails.isMultirow" class="pull-right ">
-            <a href="#/makedatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{'button.add' | translate}}</a>
-          </span></br>
-          <table ng-show="datatabledetails.isData" class="table">
+         <div data-ng-hide="isClosedClient" class="btn-group pull-right">
+          <a ng-show="datatabledetails.isData" class="btn btn-danger pull-right" 
+             ng-click="deleteAll(clientdatatable.registeredTableName, client.id)">
+             <i class="icon-trash icon-white"></i>{{'button.deleteall' | translate}}</a>
+         <!--  <span ng-show="!datatabledetails.isData || datatabledetails.isMultirow" class="pull-right "> -->
+            <a data-ng-show="showDataTableAddButton"
+               ng-href="#/makedatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}" 
+               class="btn btn-primary"><i class="icon-plus icon-white"></i>{{'button.add' | translate}}</a>
+            <a data-ng-show="showDataTableEditButton"
+		        ng-href="#/viewsingledatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}"
+		        class="btn btn-primary"><i class="icon-edit icon-white"></i>{{'button.edit' | translate}}</a>
+         </div>
+         <br></br>
+          <div ng-show="datatabledetails.isData">
+          <table class="table" data-ng-show="datatabledetails.isMultirow">
             <thead>
               <th ng-repeat="column in datatabledetails.columnHeaders">{{column.columnName}}</th>
             </thead>
               <tbody>
-                <tr ng-repeat="data in datatabledetails.data">
-                  <td ng-repeat="row in data.row">
-                    <span ng-show="$index == 0">
-                      <a href="#/viewdatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}/{{data.row[0]}}" ng-show="datatabledetails.isMultirow">{{row}}</a>
-                      <a href="#/viewdatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}/" ng-hide="datatabledetails.isMultirow">{{row}}</a>
-                    </span>
-                    <span ng-hide="$index == 0">{{row}}</span>
-                  </td>
+                <tr class="pointer-main" ng-repeat="data in datatabledetails.data">
+                <td class="pointer" ng-repeat="row in data.row"
+		                            ng-click="viewDataTable(clientdatatable.registeredTableName,data)">{{row}}</td>
+                  <!--   <span ng-show="$index == 0">
+                      <a class="pointer" data-ng-click="routeTotable(clientdatatable.registeredTableName,client.id,data.row[0])"  ng-show="datatabledetails.isMultirow">{{row}}</a>
+                      <a  class="pointer" data-ng-click="routeTotable(clientdatatable.registeredTableName,client.id)" ng-hide="datatabledetails.isMultirow">{{row}}</a>
+                    </span> 
+                    <span ng-hide="$index == 0">{{row}}</span>-->
                 </tr>
               </tbody>
           </table>
+           <table class="table table-bordered width450px"data-ng-hide="datatabledetails.isMultirow">
+		                <tr ng-repeat="value in singleRow">
+		               <td class="graybg table-font-nav">{{value.key}}</td>
+		               <td><span class="padded-td">{{value.value}}</span></td>
+		                </tr>
+		            </table></div>
         </div>
       </tab>
        <tab heading="My Device" select="getAllOwnHardware()" active="hardwareTab" ng-show="$parent.PermissionService.showMenu('READ_ownedhardware')">
