--- a/app/views/system/createdatatable.html
+++ b/app/views/system/createdatatable.html
@@ -5,7 +5,7 @@
           <li class="active">{{'label.create.datatable' | translate}}</li>
         </ul>
       </div>
-      <form class="form-horizontal well" ng-controller="CreateDataTableController" ng-submit="submit()">
+      <form  name="createdatatableform" novalidate="" class="form-horizontal well" ng-controller="CreateDataTableController" ng-submit="submit()">
       <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
@@ -14,28 +14,35 @@
         <fieldset>
           <legend>{{ 'label.create.datatable' | translate }}</legend>
           <div class="control-group">
-            <label class="control-label" for="datatableName">{{ 'label.datatable.name' | translate }}</label>
+            <label class="control-label" for="datatableName">{{ 'label.datatable.name' | translate }}<span class="required">*</span></label>
             <div class="controls">
-              <input type="text" ng-model="formData.datatableName">
+              <input type="text" ng-model="formData.datatableName" name="datatableName" required late-Validate>
+               <span ng-show="createdatatableform.datatableName.$invalid">
+                <small class="error" ng-show="createdatatableform.datatableName.$error.req">Required Field</small>
+               </span>
             </div>
           </div>
           <div class="control-group">
-            <label class="control-label" for="apptableName">{{ 'label.datatable.apptableName' | translate }}</label>
+            <label class="control-label" for="apptableName">{{ 'label.datatable.apptableName' | translate }}<span class="required">*</span></label>
             <div class="controls">
-               <select ng-model="formData.apptableName" required="required">
+               <select id="apptableName" ng-model="formData.apptableName" name="apptableName" required>
                   <option style="display:none" value="">{{'label.select.apptableName' | translate}}</option>
                   <option value="m_client">{{'apptable.m.client' | translate}}</option>
                   <option value="m_office">{{'apptable.m.office' | translate}}</option>
-                 
+                  <option value="m_group">{{'apptable.m.group' | translate}}</option>
+                  <option value="m_center">{{'apptable.m.center' | translate}}</option>
                 </select>
+                 <span ng-show="createdatatableform.apptableName.$invalid">
+                <small class="error" ng-show="createdatatableform.apptableName.$error.req">Required Field</small>
+               </span>
             </div>
           </div>
           <div class="control-group">
             <label class="control-label" for="multiRow">{{ 'label.datatable.multiRow' | translate }}</label>
-            <span class="span1"></span><input type="checkbox" ng-model="formData.multiRow" />
+            <div class="span1"><input type="checkbox" ng-model="formData.multiRow" /></div>
           </div>
           <div class="control-group">
-            <label class="control-label">{{ 'label.add.columns' | translate }}</label>
+            <label class="control-label">{{ 'label.add.columns' | translate }}<span class="required">*</span></label>
             <div class="controls">
               <input ng-model="datatableTemplate.columnName" type="text" placeholder="{{'label.column.name' | translate}}"/>&nbsp;&nbsp;
               <select ng-model="datatableTemplate.columnType">&nbsp;&nbsp;
@@ -48,6 +55,10 @@
                 <option value="Dropdown">{{'datatable.column.type.dropdown' | translate}}</option>
               </select>&nbsp;&nbsp;
               <a ng-click="addColumn()"><i class="icon-plus icon-white"></i></a>
+               <span ng-show="createdatatableform.columnname.$invalid || columnnameerror || columntypeerror">
+	                    <small class="error" ng-show="createdatatableform.columnname.$error.req || columnnameerror 
+	                                                 || columntypeerror || rc.createdatatableform.attempted">{{ 'label.'+labelerror | translate }}</small>
+	                    </span>
             </div>
           </div>
 
@@ -56,8 +67,8 @@
               <td width="11%">
                 <label class="control-label"><h4>{{ 'label.heading.columns' | translate }}</h4></label>
               </td>
-              <td class="blockquoteresult">
-                <table ng-show="columns.length > 0">
+              <td class="blockquoteresult 86%">
+                <table ng-show="columns.length > 0" class="table">
                   <thead>
                     <tr class="graybg">
                       <th>{{'table.heading.name' | translate}}</th>
@@ -98,7 +109,7 @@
           </table>
           <div class="offset3">
             <a href="#/datatables"><button id="cancel" type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
-            <button id="submit" type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
+            <button id="submit" type="submit"  ng-disabled="!createdatatableform.$valid"  class="btn btn-primary">{{ 'label.save' | translate }}</button>
           </div>
         </fieldset>
       </form>
