--- a/app/views/system/makedatatableentry.html
+++ b/app/views/system/makedatatableentry.html
@@ -16,7 +16,7 @@
 			</div>
 		</div>
 		<div class="offset2">
-			<a class="btn">{{ 'button.cancel' | translate }}</a>
+			<a  id="cancel" class="btn" ng-click="cancel()">{{ 'button.cancel' | translate }}</a>
 			<button type="submit" class="btn btn-primary">{{ 'button.save' | translate }}</button>
 		</div>
 	</fieldset>
