--- a/app/views/system/viewdatatable.html
+++ b/app/views/system/viewdatatable.html
@@ -27,7 +27,7 @@
         <strong>{{'label.associatedwith' | translate}}</strong>&nbsp;&nbsp;{{datatable.applicationTableName}}
         <table class="table" ui:sortable>
             <thead>
-                <tr>
+                <tr  class="graybg">
                     <th>{{'table.heading.fieldname' | translate}}</th>
                     <th>{{'table.heading.type' | translate}}</th>
                     <th>{{'table.heading.length' | translate}}</th>
