--- a/app/views/system/makedatatableentry.html
+++ b/app/views/system/makedatatableentry.html
@@ -9,13 +9,38 @@
 		<h3>{{ 'label.datatable.name' | translate }}-<strong>{{tableName}}</strong></h3>
 		<hr>
 		<div class="control-group" ng-repeat="columnHeader in columnHeaders">
-			<label class="control-label" for="colName">{{ columnHeader.columnName }}<span class="required">*</span></label>  
-			<div class="controls">
+			<label class="control-label" for="colName">{{ columnHeader.columnName }}
+			<span ng-show="!columnHeader.isColumnNullable" class="required">*</span></label>  
+			  <div>
+                <input ng-show="fieldType(columnHeader.columnDisplayType) == 'TEXT'" type="text"
+                       ng-model="formData[columnHeader.columnName]" class="controls"/>
+                <input ng-show="fieldType(columnHeader.columnDisplayType) == 'DATE'" type="text"
+                       datepicker-pop="dd MMMM yyyy" ng-model="formDat[columnHeader.columnName]"
+                       is-open="opened{{$index}}" class="controls"/>
+                <span data-ng-switch on="columnHeader.columnDisplayType">
+                    <select ng-show="fieldType(columnHeader.columnDisplayType) == 'SELECT'"
+                            data-ng-switch-when="CODELOOKUP"
+                            ng-model="formData[columnHeader.columnName]"
+                            ng-options="columnValue.id as columnValue.value for columnValue in columnHeader.columnValues"
+                            value="{{columnValue.id}}" class="controls">
+                        <option value="">{{'label.select.one' | translate}}</option>
+                    </select>
+                    <select ng-show="fieldType(columnHeader.columnDisplayType) == 'SELECT'"
+                            data-ng-switch-when="CODEVALUE"
+                            ng-model="formData[columnHeader.columnName]"
+                            ng-options="columnValue.value as columnValue.value for columnValue in columnHeader.columnValues"
+                            value="{{columnValue.id}}" class="controls">
+                        <option value="">{{'label.select.one' | translate}}</option>
+                    </select>
+                </span>
+            </div>
+			
+			<!-- <div class="controls">
 				<input type="text" ng-hide="columnHeader.columnDisplayType == 'CODELOOKUP'" ng-model="formData[columnHeader.columnName]">
 				<select ng-show="columnHeader.columnDisplayType == 'CODELOOKUP'" ng-model="formData[columnHeader.columnName]" ng-options="columnValue.id as columnValue.value for columnValue in columnHeader.columnValues" value="{{columnValue.id}}"></select>
-			</div>
+			</div> -->
 		</div>
-		<div class="offset2">
+		<div class="offset5">
 			<a  id="cancel" class="btn" ng-click="cancel()">{{ 'button.cancel' | translate }}</a>
 			<button type="submit" class="btn btn-primary">{{ 'button.save' | translate }}</button>
 		</div>
