--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -505,14 +505,14 @@
                ng-href="#/makedatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}" 
                class="btn btn-primary"><i class="icon-plus icon-white"></i>{{'button.add' | translate}}</a>
             <a data-ng-show="showDataTableEditButton"
-		        ng-href="#/viewsingledatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}"
+		        ng-href="#/viewsingledatatableentry/{{clientdatatable.registeredTableName}}/{{client.id}}?mode=edit"
 		        class="btn btn-primary"><i class="icon-edit icon-white"></i>{{'button.edit' | translate}}</a>
          </div>
          <br></br>
           <div ng-show="datatabledetails.isData">
           <table class="table" data-ng-show="datatabledetails.isMultirow">
-            <thead>
-              <th ng-repeat="column in datatabledetails.columnHeaders">{{column.columnName}}</th>
+            <thead> <tr class="graybg">
+              <th ng-repeat="column in datatabledetails.columnHeaders">{{column.columnName}}</th></tr>
             </thead>
               <tbody>
                 <tr class="pointer-main" ng-repeat="data in datatabledetails.data">
