--- a/app/views/system/viewdatatableentry.html
+++ b/app/views/system/viewdatatableentry.html
@@ -1,4 +1,9 @@
 <form class="form-horizontal" ng-controller="DataTableEntryController" ng-submit="submit()">
+<div class="error" ng-show="errorStatus || errorDetails">
+		<label>{{'label.contract.error' | translate}}</label>
+		<label ng-show="errorStatus">{{errorStatus}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	    </div>
 	<div ng-show="isViewMode">
 		<h2>{{ 'label.view.datatable.entry' | translate }}</h2>
 		<div class="row pull-right btn-group">
@@ -29,13 +34,34 @@
 			<legend>{{ 'label.datatable.name' | translate }}-<strong>{{tableName}}</strong></legend>
 		</fieldset>
 		<div class="control-group" ng-repeat="columnHeader in columnHeaders">
-			<label class="control-label" for="colName">{{ columnHeader.columnName }}</label>
-			<div class="controls">
-				<input type="text" ng-hide="columnHeader.columnDisplayType == 'CODELOOKUP'" ng-model="formData[columnHeader.columnName]">
-				<select ng-show="columnHeader.columnDisplayType == 'CODELOOKUP'" ng-model="formData[columnHeader.columnName]" ng-options="columnValue.id as columnValue.value for columnValue in columnHeader.columnValues" value="{{columnValue.id}}"></select>
-			</div>
-		</div>
-		<div class="offset2">
+			<label class="control-label" for="colName">{{ columnHeader.columnName }}
+                <span ng-show="!columnHeader.isColumnNullable" class="required">*</span>
+            </label>
+            <div>
+                <input ng-show="fieldType(columnHeader.columnDisplayType) == 'TEXT'" type="text"
+                       ng-model="formData[columnHeader.columnName]" class="controls"/>
+                <input ng-show="fieldType(columnHeader.columnDisplayType) == 'DATE'" type="text"
+                       datepicker-pop="dd MMMM yyyy" ng-model="formDat[columnHeader.columnName]"
+                       is-open="opened{{$index}}" class="controls"/>
+                <span data-ng-switch on="columnHeader.columnDisplayType">
+                    <select ng-show="fieldType(columnHeader.columnDisplayType) == 'SELECT'"
+                            data-ng-switch-when="CODELOOKUP"
+                            ng-model="formData[columnHeader.columnName]"
+                            ng-options="columnValue.id as columnValue.value for columnValue in columnHeader.columnValues"
+                            value="{{columnValue.id}}" class="controls">
+                        <option value="">{{'label.select.one' | translate}}</option>
+                    </select>
+                    <select ng-show="fieldType(columnHeader.columnDisplayType) == 'SELECT'"
+                            data-ng-switch-when="CODEVALUE"
+                            ng-model="formData[columnHeader.columnName]"
+                            ng-options="columnValue.value as columnValue.value for columnValue in columnHeader.columnValues"
+                            value="{{columnValue.id}}" class="controls">
+                        <option value="">{{'label.select.one' | translate}}</option>
+                    </select>
+                </span>
+            </div>
+        </div>
+		<div class="offset5">
 			<a class="btn" ng-click="cancel()">{{ 'button.cancel' | translate }}</a>
 			<button type="submit" class="btn btn-primary">{{ 'button.save' | translate }}</button>
 		</div>
