--- a/app/views/system/ipPooling.html
+++ b/app/views/system/ipPooling.html
@@ -19,6 +19,8 @@
           </div>
 <div class="pull-right">
         <a href="#/createippooling" class="btn btn-primary"><i class="icon-plus icon-white"></i> Create IpPooling</a>
+        <a href="" ng-click="edit()" class="btn btn-primary"><i class="icon-edit icon-white"></i>Update Netmask</a>
+        
 </div>
  
    <!--  <div>
@@ -149,5 +151,32 @@
    <!--  </tabset>
     </div> -->
     
+    <script type="text/ng-template" id="updatedescription.html">
+
+	<form class="form-horizontal well" ng-submit="submit()">
+	 <div class="error" ng-show="errorStatus || errorDetails">
+		<label>{{'label.contract.error' | translate}}</label>
+		<label ng-show="errorStatus">{{errorStatus}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	    </div>
+	<fieldset>
+		<legend>Update Netmask</legend>
+		<table width="100%">
+			<div class="control-group">
+		 	<label class="control-label" for="status">IpAddress And Subnet </label>
+			<div class="controls">
+			<input type="text" ng-model="formData.ip" name="ipAddress">  
+            <input type="text" style="width:20px;" id="subnet" ng-model="formData.subNet" maxlength="2"/>
+			</div>
+			</div>
+		</table>
+	</fieldset>
+	</form>
+   <div class="modal-footer">
+         <button id="cancel" class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
+         <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flag">{{'label.confirm' | translate}}</button>
+   </div>
+
+</script> 
     
 </div>
