--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -87,19 +87,145 @@
 
         <fieldset>
           <legend>{{'label.createorder' | translate}}</legend>
-         <legend>{{'label.postpaidplans' | translate}}</legend>
-          <table width="100%" >
+          <table >
             <tr>
-              <td width="30%">
-             <table class="table table-striped table-condensed table-hover" ng-style="{ width:450 }">
+              <td>
+           
+             <accordion close-others="true">
+            	 <accordion-group is-open="postpaid.open" ng-click="postpaid.open=!postpaid.open">
+             		<accordion-heading>
+            	 		<strong>{{'label.postpaidplans' | translate}}</strong> 
+            	 		<i class="pull-right" ng-class="{'icon-chevron-up': postpaid.open, 'icon-chevron-down': !postpaid.open}"></i>
+        			</accordion-heading>
+        			<div style="max-height:250px; overflow-y:auto">
+        			<table class="table table-striped table-condensed table-hover" ng-style="{ width:400 }">
+               		 <thead>
+               		 	<tr>
+                		   <td  colspan="2" >
+                			  <input ng-model="filterText" type="text" style="width:23em;" placeholder="Filter by Plan">
+                		   </td>
+                	    	</tr>
+                    	<tr>
+                       		<th class="id">Select&nbsp;</th>
+                        	<th class="planCode">Plan(Service)&nbsp;</th>
+                 	   </tr>
+                	</thead>
+                	 <tbody>
+                	   <tr ng-repeat="postpaidPlanData in postpaidPlanDatas  | filter:filterText" ng-show="postpaidPlanData.isPrepaid == 'N'">
+                	   		<td>
+                	   			<input type="radio" id="{{postpaidPlanData.id}}" name="planCode" value="postpaidPlanData.id" ng-click='setBillingFrequency(postpaidPlanData.id)'/>
+                	   		</td>
+                	   		 <td ng-show="postpaidPlanData.isPrepaid == 'N'">
+                              <label for="{{postpaidPlanData.id}}" >{{postpaidPlanData.planCode}}-
+                     		     <any ng-repeat="services in postpaidPlanData.availableServices">
+                       			    {{services.serviceDescription}} 
+                         	  	   <any ng-hide="(postpaidPlanData.availableServices.length-1)==$index">,</any>
+                        	     </any>
+                              </label>
+                           </td>
+                	   </tr>
+                     </tbody>
+                   </table>
+                   </div>
+    			 </accordion-group>
+    			 <br/>
+    			  <accordion-group is-open="prepaid.open">
+             		<accordion-heading>
+            	 		<strong>{{'label.prepaidplans' | translate}}</strong>
+            	 		<i class="pull-right" ng-class="{'icon-chevron-up': prepaid.open, 'icon-chevron-down': !prepaid.open}"></i>
+        			</accordion-heading>
+     					   <div style="max-height:250px; overflow-y:auto">
+        			<table class="table table-striped table-condensed table-hover" ng-style="{ width:400 }">
+               		 <thead>
+               		 	<tr>
+                		   <td colspan="2" >
+                			  <input ng-model="filterText" type="text" style="width:23em;" placeholder="Filter by Plan">
+                		   </td>
+                	    	</tr>
+                    	<tr>
+                       		<th class="id">Select&nbsp;</th>
+                        	<th class="planCode">Plan(Service)&nbsp;</th>
+                 	   </tr>
+                	</thead>
+                	 <tbody>
+                	   <tr ng-repeat="prepaidPlanData in prepaidPlanDatas  | filter:filterText" ng-show="prepaidPlanData.isPrepaid == 'Y'">
+                	   		<td>
+                	   			<input type="radio" id="{{prepaidPlanData.id}}" name="planCode" value="prepaidPlanData.id" ng-click='setBillingFrequency(prepaidPlanData.id)'/>
+                	   		</td>
+                	   		 <td ng-show="prepaidPlanData.isPrepaid == 'Y'">
+                              <label for="{{prepaidPlanData.id}}" >{{prepaidPlanData.planCode}}-
+                     		     <any ng-repeat="services in prepaidPlanData.availableServices">
+                       			    {{services.serviceDescription}} 
+                         	  	   <any ng-show="services">,</any>
+                        	     </any>
+                              </label>
+                           </td>
+                	   </tr>
+                     </tbody>
+                   </table>
+                   </div>
+    			 </accordion-group>
+    		 </accordion>
+              </td>
+              <td valign="top">
+                      <div class="control-group">
+                          <label class="control-label" for="startDate">{{ 'label.order.startdate' | translate }}</label>
+                            <div class="controls">
+                          <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="start.date" is-open="opened" min="minDate" max="maxDate" 
+                          date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
+                          </div>
+                        </div>
+                       <div class="control-group">
+                         <label class="control-label" for="contractPeriod">{{ 'label.order.contractperiod' | translate }}</label>
+
+                           <div class="controls">
+                              <select   ng-disabled="formData.isPrepaid == 'Y'" ng-model="formData.contractPeriod"  ng-options="subscriptiondata.id as subscriptiondata.Contractdata for subscriptiondata in subscriptiondatas" value="{{billRuleData.id}}"></select>
+                           </div>
+                        </div>
+                        <div class="control-group" ng-hide="formData.isPrepaid == 'Y'">
+                          <label class="control-label" for="paytermCode">{{ 'label.order.billingfrequency' | translate }}</label>
+                             <div class="controls">
+                                <select ng-model="formData.paytermCode"  ng-options="paytermdata.paytermtype as paytermdata.paytermtype for paytermdata in paytermdatas" value="{{billRuleData.id}}"></select>
+                            </div>
+                          </div>
+                        <div class="control-group" ng-hide="formData.isPrepaid == 'Y'">
+                            <label class="control-label" for="billAlign">{{ 'label.order.billalign' | translate }}</label>
+                        <div class="controls">
+                            <label class="checkbox">
+                              <input type="checkbox" ng-model="formData.billAlign">
+                       </label>
+            		</div>
+          			</div>
+          <div class="pull-right">
+            
+               <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
+          <!--  <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button> -->
+               <button id="submit" ng-click="submit()" class="btn btn-primary" ng-show="todayDate==selectedDate">Save</button>
+               <button  ng-click="submitschedule()"  class="btn btn-primary" ng-hide="todayDate==selectedDate">Save Later</button>
+          </div>
+              </td>
+            </tr>
+          </table>
+     
+        </fieldset>
+         
+            
+        
+      </form>
+ </div>
+
+
+<!-- do not delete this comment code it is important.... -->
+
+ <!--  <table class="table table-striped table-condensed table-hover" ng-style="{ width:450 }">
                 <thead>
                     <tr>
                         <th class="id">Select&nbsp;<a ng-click="sort_by('id')"></a></th>
                         <th class="planCode">Plan(Service)&nbsp;<a ng-click="sort_by('planCode')"><i class="icon-sort"></i></a></th>
                          
-                        <!-- <th class="field3">Field 3&nbsp;<a ng-click="sort_by('field3')"><i class="icon-sort"></i></a></th>
+                        <th class="field3">Field 3&nbsp;<a ng-click="sort_by('field3')"><i class="icon-sort"></i></a></th>
                         <th class="field4">Field 4&nbsp;<a ng-click="sort_by('field4')"><i class="icon-sort"></i></a></th>
-                        <th class="field5">Field 5&nbsp;<a ng-click="sort_by('field5')"><i class="icon-sort"></i></a></th>  -->
+                        <th class="field5">Field 5&nbsp;<a ng-click="sort_by('field5')"><i class="icon-sort"></i></a></th> 
                     </tr>
                 </thead>
                 <tfoot>
@@ -143,16 +269,18 @@
                <legend>{{'label.prepaidplans' | translate}}</legend>
               <table class="table table-striped table-condensed table-hover" ng-style="{ width:450 }">
                 <thead>
+                	
                     <tr>
                         <th class="id">Select&nbsp;<a ng-click="sort_by('id')"></a></th>
                         <th class="planCode1">Plan(Service)&nbsp;<a ng-click="sort_by('planCode1')"></i></a></th>
                          
-                        <!-- <th class="field3">Field 3&nbsp;<a ng-click="sort_by('field3')"><i class="icon-sort"></i></a></th>
+                        <th class="field3">Field 3&nbsp;<a ng-click="sort_by('field3')"><i class="icon-sort"></i></a></th>
                         <th class="field4">Field 4&nbsp;<a ng-click="sort_by('field4')"><i class="icon-sort"></i></a></th>
-                        <th class="field5">Field 5&nbsp;<a ng-click="sort_by('field5')"><i class="icon-sort"></i></a></th>  -->
+                        <th class="field5">Field 5&nbsp;<a ng-click="sort_by('field5')"><i class="icon-sort"></i></a></th> 
                     </tr>
+                    
                 </thead>
-                <!--  <tfoot>
+                 <tfoot>
                     <td colspan="2">
                         <div class="pagination pull-right">
                             <ul>
@@ -170,7 +298,7 @@
                             </ul>
                         </div>
                     </td>
-                </tfoot> -->
+                </tfoot>
                 <tbody>
                     <tr ng-repeat="item in prepaidPlanspagedItems[currentPage] | orderBy:sortingOrder:reverse " ng-show="item.isPrepaid == 'Y'">
 
@@ -189,51 +317,8 @@
                         
                     </tr>
                 </tbody>
-            </table>
-              </td>
-              <td width="70%" align="top">
-                      <div class="control-group">
-                          <label class="control-label" for="startDate">{{ 'label.order.startdate' | translate }}</label>
-                            <div class="controls">
-                          <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="start.date" is-open="opened" min="minDate" max="maxDate" 
-                          date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
-                          </div>
-                        </div>
-                       <div class="control-group">
-                         <label class="control-label" for="contractPeriod">{{ 'label.order.contractperiod' | translate }}</label>
+            </table> -->
 
-                           <div class="controls">
-                              <select   ng-disabled="formData.isPrepaid == 'Y'" ng-model="formData.contractPeriod"  ng-options="subscriptiondata.id as subscriptiondata.Contractdata for subscriptiondata in subscriptiondatas" value="{{billRuleData.id}}"></select>
-                           </div>
-                        </div>
-                        <div class="control-group" ng-hide="formData.isPrepaid == 'Y'">
-                          <label class="control-label" for="paytermCode">{{ 'label.order.billingfrequency' | translate }}</label>
-                             <div class="controls">
-                                <select ng-model="formData.paytermCode"  ng-options="paytermdata.paytermtype as paytermdata.paytermtype for paytermdata in paytermdatas" value="{{billRuleData.id}}"></select>
-                            </div>
-                          </div>
-                        <div class="control-group" ng-hide="formData.isPrepaid == 'Y'">
-                            <label class="control-label" for="billAlign">{{ 'label.order.billalign' | translate }}</label>
-                        <div class="controls">
-                            <label class="checkbox">
-                              <input type="checkbox" ng-model="formData.billAlign">
-                       </label>
-            		</div>
-          			</div>
-              </td>
-            </tr>
-          </table>
-     
-          <div class="pull-right">
-            
-               <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
-          <!--  <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button> -->
-               <button id="submit" ng-click="submit()" class="btn btn-primary" ng-show="todayDate==selectedDate">Save</button>
-               <button  ng-click="submitschedule()"  class="btn btn-primary" ng-hide="todayDate==selectedDate">Save Later</button>
-          </div>
-        </fieldset>
-         
-            
-        
-      </form>
-</div>
+
+
+
