--- a/app/views/system/ipPooling.html
+++ b/app/views/system/ipPooling.html
@@ -42,6 +42,7 @@
                 <th>{{'table.ippooling.id' | translate}}</th>    
                 <th>{{'table.ippooling.ipaddress' | translate}}</th>  
                 <th>{{'table.ippooling.ippooldescription' | translate}}</th>
+                <th>IPType</th>
                 <th>{{'table.ippooling.clientId' | translate}}</th>
                 <th>{{'table.ippooling.clientname' | translate}}</th>
                 <th>{{'table.ippooling.status' | translate}}</th>
@@ -56,11 +57,12 @@
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.id}}</td>
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.ipAddress}}</td> 
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.ipPoolDescription}}</td>
+                <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.typeCodeValue}}</td>
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.clientId}}</td>
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.clientName}}</td>  
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.status}}</td>  
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.notes}}</td>                                     
-              <td><a href="#/editippolling/{{ippoolingdata.id}}" ng-show="ippoolingdata.status =='Intermediate'" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>                                   
+              <td><a href="#/editippolling/{{ippoolingdata.id}}" ng-hide="ippoolingdata.status =='Assigned'" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>                                   
    			</tr>
      		 </tbody>
           </table>
