--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -5,6 +5,9 @@
 </div>
 <div class="row-fluid" ng-controller="GlobalConfigurationController">
     <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="{{'label.filterbyname' | translate}}">
+    <div class="pull-right">
+        <a href="#/createsmtp" class="btn btn-primary"><i class="icon-plus icon-white"></i>Create SMTP</a>
+    </div>
     <table class="table">
         <thead>
         <tr class="graybg">
