--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -145,13 +145,13 @@
             <div class="control-group">
               <label class="control-label" for="state">{{'label.state' | translate}}<span class="required">*</span></label>
               <div class="controls">
-                <input type="text" id="state" ng-model="formData.state" required/>
+                <input type="text" id="state" ng-model="formData.state" readonly required/>
               </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="country">{{'label.country' | translate}}<span class="required">*</span></label>
               <div class="controls">
-                <input type="text" id="country" name="country" ng-model="formData.country" required/>
+                <input type="text" id="country" name="country" ng-model="formData.country" readonly required />
               
               </div>
             </div>
