--- a/app/views/crm/tickets/newTicket.html
+++ b/app/views/crm/tickets/newTicket.html
@@ -77,7 +77,7 @@
 			<li class="active">{{'label.creatticket' | translate}}</li>
 		</ul>
 	</div>
-<form class="form-horizontal well"  ng-submit="submit()">
+<form name="createticketform" class="form-horizontal well"  ng-submit="submit()">
 
  <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
@@ -100,11 +100,12 @@
 				</td>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="priority">{{'label.ticket.priority' | translate }}</label>
+						<label class="control-label" for="priority">{{'label.ticket.priority' | translate }}<span class="required">*</span></label>
 						<div class="controls">
-							<select ng-model="formData.priority"
+							<select name="priority" ng-model="formData.priority"
 								ng-options="priorityType.value as priorityType.value for priorityType in priorityTypes"
-								value="{{priorityType.value}}"></select>
+								value="{{priorityType.value}}" required late-Validate></select>
+						
 						</div>
 					</div>
 				</td>
@@ -112,21 +113,21 @@
 			<tr>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="Category"> {{'label.ticket.category' | translate }} </label>
+						<label class="control-label" for="Category"> {{'label.ticket.category' | translate }}<span class="required">*</span></label>
 						<div class="controls">
-							<select ng-model="formData.problemCode"
+							<select name="category" ng-model="formData.problemCode"
 								ng-options="problemsData.problemCode as problemsData.problemDescription for problemsData in problemsDatas"
-								value="{{problemsData.problemCode}}"></select>
+								value="{{problemsData.problemCode}}" required late-Validate></select>
 						</div>
 					</div>
 				</td>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="chargeCode"> {{'label.ticket.assignto' | translate }}</label>
+						<label class="control-label" for="chargeCode"> {{'label.ticket.assignto' | translate }}<span class="required">*</span></label>
 						<div class="controls">
 							<select ng-model="formData.assignedTo"
 								ng-options="usersData.id as usersData.userName for usersData in usersDatas"
-								value="{{usersData.id}}"></select>
+								value="{{usersData.id}}" required late-Validate></select>
 						</div>
 					</div>
 				</td>
@@ -157,23 +158,21 @@
           			</div>	
 				</td>
 			</tr>
-			<tr>
-				<td width="50%">
+			</table>
+				<center><i>Please provide as much detail as possible so we can best assist you.</i><span class="required">*</span></center>
+		
 					<div class="control-group">
 						<label class="control-label" for="description">{{
-							'label.ticket.description' | translate }}</label>
+							'label.ticket.description' | translate }}<span class="required">*</span></label>
 						<div class="controls">
-							    <textarea ng-model="formData.description"  style="width:278%; height:8em;"></textarea>
+							    <textarea ng-model="formData.description" name="description" style="width:92%; height:8em;" required late-Validate></textarea>
 						</div>
 					</div>
-				</td>
 				
-			</tr>
-		</table>
 
-		<div class="offset3">
+		<div class="pull-right">
 			<a id="cancel" href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
-			<button id="submit" type="submit" class="btn btn-primary">Save</button>
+			<button id="submit" type="submit" ng-disabled="!createticketform.$valid" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
