--- a/app/views/crm/tickets/editTicket.html
+++ b/app/views/crm/tickets/editTicket.html
@@ -56,7 +56,7 @@
 			<li class="active">{{'label.editticket' | translate}}</li>
 		</ul>
 	</div>
-<form class="form-horizontal well" ng-submit="submit()">
+<form name="editticketform" class="form-horizontal well" ng-submit="submit()">
 
 	 <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
@@ -65,9 +65,9 @@
 	    </div>
 	<fieldset>
 		<legend>Add Comment</legend>
-		<table width="100%">
+		<table>
 			<tr>
-				<td width="50%">
+				<td>
 					<div class="control-group">
 						<label class="control-label" for="status"> {{'label.ticket.status' | translate }} </label>
 						<div class="controls">
@@ -77,33 +77,28 @@
 						</div>
 					</div>
 				</td>
-				
-			</tr>
-			<tr>
-				<td width="50%">
+				<td>
 					<div class="control-group">
-						<label class="control-label" for="assignedTo">{{'label.tickethistory.assignto' | translate }}</label>
+						<label class="control-label" for="assignedTo">{{'label.tickethistory.assignto' | translate }}<span class="required">*</span></label>
 						<div class="controls">
 							<select ng-model="formData.userId"
 								ng-options="users.id as users.userName for users in usersData"
-								value="{{users.id}}"></select>
+								value="{{users.id}}" required late-Validate></select>
 						</div>
 					</div>
 				</td>
 			</tr>
-     		<tr>
-				<td width="50%">
-					<div class="control-group">
-						<label class="control-label" for="description"> {{
+			<tr>
+				<td colspan="2"><div class="control-group">
+						<label style="margin-top:15px;" class="control-label" for="description"> {{
 							'label.ticket.comments' | translate }}</label>
 						<div class="controls">
-							    <textarea ng-model="formData.comments" style="width:30.5%; height:8em;"></textarea>
+						<i>&nbsp;Please provide as much detail as possible so we can best assist you.</i><span class="required">*</span>
+							    <textarea ng-model="formData.comments" style="width:98%; height:8em;" required late-Validate></textarea>
 						</div>
-					</div>
+				</div>
 				</td>
-				
 			</tr>
-
 			<tr>
 				<td>
 					<div class="control-group">
@@ -113,13 +108,12 @@
 						</div>
 					</div>
 				</td>
-
 			</tr>
 		</table>
-		
-		<div class="offset3">
+     		
+		<div class="pull-right">
 			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
-			<button type="submit" class="btn btn-primary">Save</button>
+			<button type="submit" ng-disabled="!editticketform.$valid" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
