--- a/app/views/system/editjobparameters.html
+++ b/app/views/system/editjobparameters.html
@@ -23,7 +23,7 @@
                 </div>
               </div>
               
-              <div class="control-group" ng-show="formData.displayName =='Invoice'|| 'Generate PDF'">
+              <div class="control-group" ng-show="formData.displayName =='Invoice'">
             <label class="control-label" for="startDate">{{ 'label.job.processdate' | translate }}</label>
             <div class="controls">
                  <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.processDate" is-open="opened" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)"/>
@@ -37,7 +37,7 @@
             </div>
            </div>
            
-            <div class="control-group" ng-show="formData.displayName =='Generate Statment'">
+            <div class="control-group" ng-show="formData.displayName =='Generate Statement'">
 			<label class="control-label" for="promotionalMessage">{{'label.job.promotionalmessage' | translate}}</label>
 			<div class="controls">
 				<textarea rows="2" cols="2" ng-model="formData.promotionalMessage"></textarea>
