deleted documets tab,identities tab and added 'Add Info' Tab

--- a/app/views/clients/addnewcreditcarddetails.html
+++ b/app/views/clients/addnewcreditcarddetails.html
@@ -60,7 +60,7 @@
 		   <label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 	  <fieldset>
-		<legend>>New Card Details</legend>
+		<legend>New Card Details</legend>
 	   <table>
 		 <tr>
 		   <td>
